Revision history for URN-OASIS-SAML2

{{$NEXT}}

0.003     2022-07-30 16:17:14Z

    * Add new constants for nameid's and status
    * Rename bindings and classes to singular form in export
      Plural form is still supported

0.002     2022-07-20 21:22:58Z

    * Fix doublice ':' bug in binding constants

0.001     2022-07-19 21:08:31Z

    * Initial release