@@ -2,6 +2,9 @@ Revision history for URN-OASIS-SAML2
 
 {{$NEXT}}
 
+    * Bump NAMEID_FORMAT constants to SAML 2 namespace. They were
+      previously in SAML 1.1 namespace, which was incorrect.
+
 0.003     2022-07-30 16:17:14Z
 
     * Add new constants for nameid's and status
